queryoptions, queryfunctions, optionsswitch, wiseguyingest, moificationrequestbase